[package]
name = "soroban-escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "0.0.3"
soroban-token-contract = { version = "0.0.2", default-features = false  }
ed25519-dalek = { version = "1.0.1", optional = true }
sha2 = { version = "0.10.2", optional = true }

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils", "soroban-token-contract/testutils", "dep:ed25519-dalek", "dep:sha2"]

[dev_dependencies]
soroban-escrow = { path = ".", default-features = false, features = ["testutils"] }
rand = { version = "0.7.3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
